style.css
/* ... */
.nav-logo{
    width: 80px;
    background: #e6e6f3;
    padding: 10px;
    border-radius: 40px;
}


nav .nav-links ul li{
    display: inline-block;
    list-style: none;
    margin: 10px 2px;
}

.navbar-link{
    color: #1b1729;
    text-decoration: none;
    font-size: 18px;
    position: relative;
    padding: 5px 10px;
    border-radius: 25px;
    background: #e6e6f3;
}

.navbar-link span{
    color:#1b1729;
}

.navbar-link:hover{
    color: #6e78a5;

}

nav .social-media{
    padding: 0;
    background: #e6e6f3;
    border-radius: 15px;

}

nav .social-media ul li{
    display: inline-block;
    margin: 0 15px;
    font-size: 30px;
    cursor: pointer;
    transition: transform 0.5s;
}

nav .social-media ul li a{
    color: #1b1729;
}

nav .social-media ul li:hover{
    transform: translateY(-5px);
}

nav .social-media ul li:hover a{
    color: #6e78a5;
}

/*--------------------------home----------------------*/


.home{
    height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 1200px;
}

.hero-mobile{
    display: none;
}

.background{
    position: fixed;
    top: -300px;
    z-index: -100;
}

.home-logo{
    width: 40%;
    margin-top: 25%;
    position: fixed;
    z-index: 0;
}

.home-logo img {
    width: 22%;
    position: absolute;
    border-radius: 50%;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 10;
}

.home-text{
    position: absolute;
    margin-top: 30%;
    width: 100%;;
    font-size: 20px;
    color: #1b1729;
    z-index: 100;
}

.parallax-right{
    position:absolute;
    top: 0;
    left: 41%;
}

.parallax-left{
    position:absolute;
    top: 100px;
    left: 41%;
}

.home-text h1{
    font-size: 60px;
    color:#1b1729;
}

.home-text h1 span{
    font-size: 72px;
    color: #1b1729;
}



/*------------------------about-----------------------*/

#about{
    padding: 2% 0;
    height: 110vh;
    background: #1b1729;
    z-index: 10;
}

#about .container{
    height: 100%;
    display: flex;
    justify-content: center;

}

#about h1{
    margin-bottom: 20px;
}

.row{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

.about-col-1{
    flex-basis: 40%;
}

.about-col-1 img{
    margin: 10% 0 10% 15%;
    position: relative;
    width: 80%;
}

.about-col-2{
    flex-basis: 50%;
    margin: 5%;
}

.about-col-2 p{
    padding-top: 5px;
    font-size: 20px;
    line-height: 1.2;
}

.tab-titles{
    display: flex;
    margin: 30px 0 30px;
}

.tab-links{
    margin-right: 80px;
    font-size: 24px;
    font-weight: 600;
    color:#e2e2f8;
    cursor: pointer;
    position: relative;
    padding: 5px 10px;
    border: 3px solid transparent;
    border-radius: 25px;
}

.skills-link{
    border: 3px solid #d47636;
}

.skills-link:hover{
    background: #d47636;
}

.skills-link.active-link{
    color: #1b1729;
    border: 3px solid #d47636;
    background: #d47636;
}

.education-link{
    border: 3px solid #c6aed2;
}

.education-link:hover{
    background: #c6aed2;
}

.education-link.active-link{
    color: #1b1729;
    border: 3px solid #c6aed2;
    background: #c6aed2;
}

.experience-link{
    border: 3px solid #80c3b3;
}

.experience-link:hover{
    background: #80c3b3;
}

.experience-link.active-link{
    color: #1b1729;
    border: 3px solid #80c3b3;
    background: #80c3b3;
}

.tab-contents.skills.active-tab{
    display: flex;
    flex-wrap: wrap;
}

.skillcard{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin-bottom: 20px;
}

.skillcard img{
    margin: 10px 20px;
    width: 70px;
    height: 70px;
    border-radius: 50%;
    background: #646b89;
    box-shadow: 0px 0px 3px 3px #6e78a5;
}

.skillcard h3{
    font-size: 16px;
}

.tab-contents ul li{
    font-size: 18px;
    font-weight: 500;
    line-height: 1.5;
    list-style: none;
    margin: 10px 0;
}

.tab-contents ul li span{
    color: #e2e2f8;
    font-weight: 500;
    font-size: 20px;
    font-weight: 580;
}

.tab-contents{
    display: none;
}

.tab-contents.active-tab{
    display: block;
}

/*------------------------services-----------------------*/

#services{
    padding: 100px 0;
    height: 110vh;    
    background: #e6e6f3;
    z-index: 10;
}

#services .container{
    padding: 6% 5% 5% 5%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#services h1{
    color: #1b1729;
    margin-bottom: 80px;
}

.services-list{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-gap: 40px;
    color: #1b1729;
}

.service1{
    background: #d47636;
}

.service1 a{
    color: #d47636;
}

.service2{
    background: #c6aed2;
}

.service2 a{
    color: #c6aed2;
}

.service3{
    background: #80c3b3;
}

.service3 a{
    color: #80c3b3;
}

.services-list div{
    padding: 40px;
    font-size: 18px;
    font-weight: 550;
    transition: transform 0.3s, box-shadow 0.3s;
}

.services-list div i{
    font-size: 72px;
    margin-bottom: 30px;
}

.services-list div h2{
    font-size: 30px;
    margin-bottom: 15px;
}

.services-list div a{
    text-decoration: none;
    font-size: 15px;
    margin-top: 20px;
    display: inline-block;
}

.services-list div:hover{
    box-shadow: 0px 0px 5px 5px #646b89;
    transform: scale(1.03);
}

.services-list div:hover a{
    color: #1b1729;
}

/*------------------------websites-----------------------*/

#my-work{
    display: flex;
}


#websites{
    padding: 50px 0;
    height: 100vh;
    background: #1b1729;
}

#websites .container{
    width: 2200px;
    height: 100%;
    padding: 50px 5%;
}

#websites h1{
    margin-bottom: 30px;
}

.website-list{
    display: flex;
    grid-gap: 200px;
    margin-left: 20px;
    height:75%;
}
/* ... */

